# xcengine

./: .gitignore  404.html  CHANGES.md  CODE_OF_CONDUCT.md  LICENSE  README.md  buildxce.py  environment.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  wrapper.py
.github/workflows/: publish-docs.yaml  publish-pypi.yaml  tests.yaml
docs/: index.md  installing.md  intro.md  notebook.md  resources.md  running-eoaps.md  testing.md  xcetool.md
examples/: cci.ipynb  dynamic.ipynb  environment.yml  staging.ipynb
examples/dynamic/: dynamic.ipynb  environment.yml
examples/ndvi/: environment.yml  ndvi.ipynb
installing/: index.html
intro/: index.html
notebook/: index.html
resources/: index.html
running-eoaps/: index.html
search/: search_index.json
test/: test_builders.py  test_cli.py  test_core.py  test_parameters.py  test_util.py  test_wrapper.py
test/data/: data.tar  my-environment.yml  noparamtest.ipynb  parameters.yaml  paramtest.ipynb
testing/: index.html
xcengine/: builders.py  buildxce.py  cli.py  core.py  parameters.py  util.py  wrapper.py
xcetool/: index.html
