[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "xcengine"
dynamic = ["version"]
authors = [
  {name = "Pontus Lurcock", email = "pontus.lurcock@brockmann-consult.de"}
]
description = """\
  Tools for the Open-Earth-Monitor compute engine\
  """
keywords = [
  "analysis ready data", "data science", "datacube", "xarray", "zarr"
]
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "click",
  "docker",
  "ipython",  # Used by nbconvert to transform IPython syntax to pure Python
  "nbformat",
  "nbconvert",
  "xarray",
  "xcube-core"
]

[tool.setuptools.dynamic]
version = {attr = "xcengine.__version__"}

[tool.setuptools.packages.find]
exclude = [
  "test*",
  "doc*",
  "site*",
  "htmlcov*"
]

[project.scripts]
buildxce = "xcengine.buildxce:cli"

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "black",
  "flake8"
]
doc = [
  "mkdocs",
  "mkdocs-material",
  "mkdocstrings",
  "mkdocstrings-python"
]

[project.urls]
Documentation = "https://github.com/xcube-dev/xcengine/blob/main/README.md"
Issues = "https://github.com/xcube-dev/xcengine/issues"
Changelog = "https://github.com/xcube-dev/xcengine/blob/main/CHANGES.md"
Repository = "https://github.com/xcube-dev/xcengine"
